    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====
    ==> 143/144 - 4/01/2007 <==

B <mave> bugfix in nnfw-config script generation
+ <mave> added nnfw-config script for Linux users

    ==> 142 - 4/01/2007 <==

C <mave> implemented Random::gauss with GSL library
B <mave> correct wrong initialization in switch

    ==> 141 - 29/11/2006 <==

+ <mave> memoryCopy & memoryZeroing specialization for bool type
+ <mave> SparseMatrixLinker, added methods: disconnectRandom(Real), connectRandom(Real) and disconnectAll()
C <mave> disconnect(Real) changed name in disconnectRandom(Real), SparseMatrixLinker
C <mave> all attributes of MatrixLinker are privates now

    ==> 140 - 27/11/2006 <==

+ <mave> added Gaussian output function (this complete the support for RBF networks)
+ <mave> added NormLinker (perform the euclidean norm calculation)
+ <mave> added DotLinker (perform the dot-product calculation)
B <mave> in CMakeLists.txt
+ <mave> added documentation about properties of classes
C <mave> CSS apidoc's stylesheet changed
+ <mave> now Vector property are saved into XML files

    ==> 135 - 13/11/2006 <==

B <mave> bugfixs in Doxygen documentation
+ <mave> implemented saveXML (vector properties are not yet supported)
+ <mave> method RealVec::at(int) for accessing element from a pointer (an alternative to operator[])
B <mave> bugfixs in parsing primitive types (int, u_int, char, u_char, boolean)
C <mave> improved and optimized XML parsing implementation
- <mave> removed special tag <outputfunction>

    ==> 133 - 10/11/2006 <==

B <mave> resolved bug in recursive property parsing